--- a/templates/Principal/inicio.html
+++ b/templates/Principal/inicio.html
@@ -9,7 +9,7 @@
   <meta content="Red social de imagenes" name="descriptison">
   <meta content="imagenes, red social" name="keywords">
 
-  <link href="{{ url_for('static', filename='assets/img/logo.png') }}" rel="icon">
+  <link href="{{ url_for('static', filename='img/logo.png') }}" rel="icon">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -21,7 +21,7 @@
   <link href="/static/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="/static/assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <link href="/static/assets/css/style.css" rel="stylesheet">
+  <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -87,10 +87,10 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Crema Spa</h4>
-              <a href="/static/assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/static/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="/imagen_descargar" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
               <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
@@ -98,10 +98,10 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-private">
-            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Energy cafe</h4>
-              <a href="/static/assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/static/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="/imagen_descargar" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
               <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
@@ -109,10 +109,10 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/img/portfolio/portfolio-3.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Natural</h4>
-              <a href="/static/assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/static/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="/imagen_descargar" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
               <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
@@ -120,10 +120,10 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-private">
-            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/img/portfolio/portfolio-4.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Artesania</h4>
-              <a href="/static/assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/static/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="/imagen_descargar" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
               <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
@@ -131,10 +131,10 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-private">
-            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/img/portfolio/portfolio-5.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Escritorio</h4>
-              <a href="/static/assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/static/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="/imagen_descargar" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
               <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
@@ -142,10 +142,10 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Sun Glasses</h4>
-              <a href="/static/assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/static/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="/imagen_descargar" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
               <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
@@ -153,10 +153,10 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/img/portfolio/portfolio-7.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Fotografia</h4>
-              <a href="/static/assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/static/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="/imagen_descargar" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
               <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
@@ -164,10 +164,10 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/img/portfolio/portfolio-8.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Relax</h4>
-              <a href="/static/assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/static/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="/imagen_descargar" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
               <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
@@ -175,10 +175,10 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Que hora es?</h4>
-              <a href="/static/assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/static/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="/imagen_descargar" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
               <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
@@ -214,7 +214,7 @@
   <script src="/static/assets/vendor/aos/aos.js"></script>
 
   <!-- Main JS -->
-  <script src="/static/assets/js/main.js"></script>
+  <script src="/static/js/main.js"></script>
 
 </body>
 
